@@ -78,5 +78,12 @@
  *    <td>RingBuff.h</td>
  *    <td>Defines the maximum number of bytes which can be buffered in each Ring Buffer.</td>
  *   </tr>
+ *   <tr>
+ *    <td>WIN_LIBUSB_COMPAT</td>
+ *    <td>Makefile CDEFS</td>
+ *    <td>Define to switch to a non-standard endpoint scheme, breaking compatibility with AVRStudio under Windows but making
+ *        the code compatible with Windows builds of avrdude using the libUSB driver. Linux platforms are not affected by this
+ *        option.
+ *   </tr>
  *  </table>
  */
